--- a/app/src/main/res/layout/dialog_option.xml
+++ b/app/src/main/res/layout/dialog_option.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/_300sdp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:layout_margin="@dimen/_20sdp"
   >
 
     <TextView
